# Kagami

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/kagami/: config.hpp  kasumi_client.hpp  kasumi_uapi_compat.hpp
manager/: .gitignore  gradle.properties  settings.gradle.kts
manager/app/: build.gradle.kts
manager/app/src/main/: AndroidManifest.xml
manager/app/src/main/aidl/com/anatdx/kagami/: IKasumiRootService.aidl
manager/app/src/main/cpp/: CMakeLists.txt  kagami_jni.cpp
manager/app/src/main/java/com/anatdx/kagami/: AppRepository.kt  KagamidBridge.kt  KasumiNative.kt  KasumiRootService.kt  MainActivity.kt  MainViewModel.kt  NativeKasumiClient.kt
manager/app/src/main/res/drawable/: ic_launcher.xml
manager/app/src/main/res/values/: strings.xml  styles.xml
manager/app/src/main/res/values-zh-rCN/: strings.xml
manager/gradle/: libs.versions.toml
module/: action.sh  boot-completed.sh  customize.sh  metainstall.sh  metamount.sh  metauninstall.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
scripts/: build.sh  kagamibot.py  package.sh
src/: main.cpp
src/core/: command.cpp  command.hpp  config.cpp  daemon.cpp  daemon.hpp  json.hpp  json_value.cpp  json_value.hpp  runtime.cpp  runtime.hpp
src/mount/: backend.cpp  backend.hpp  kasumi.cpp  kasumi_client.cpp  magic_mount.cpp  magic_mount.hpp  mount_fs.cpp  mount_fs.hpp  overlayfs.cpp  overlayfs.hpp  storage.cpp  storage.hpp
webui/: api.js  config.json  i18n.js  index.html  index.js  preview.sh
